--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,14 @@ readme = "README.md"
 packages = [{include = "users_edit_api"}]
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^3.10"
 fastapi = "^0.95.1"
 pydantic = "^1.10.7"
 asyncpg = "^0.27.0"
 uvicorn = "^0.22.0"
+alembic = "^1.10.4"
+sqlalchemy = "^2.0.12"
+psycopg2-binary = "^2.9.5"
 
 
 [build-system]
