--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ sqlalchemy = "^2.0.12"
 psycopg2-binary = "^2.9.5"
 
 
+[tool.poetry.group.dev.dependencies]
+flake8 = "^6.0.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
