--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ uvicorn = "^0.22.0"
 alembic = "^1.10.4"
 sqlalchemy = "^2.0.12"
 psycopg2-binary = "^2.9.5"
+python-dotenv = "^1.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
