--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ mako==1.2.4 ; python_version >= "3.10" and python_version < "4.0"
 markupsafe==2.1.2 ; python_version >= "3.10" and python_version < "4.0"
 psycopg2-binary==2.9.6 ; python_version >= "3.10" and python_version < "4.0"
 pydantic==1.10.7 ; python_version >= "3.10" and python_version < "4.0"
+python-dotenv==1.0.0 ; python_version >= "3.10" and python_version < "4.0"
 sniffio==1.3.0 ; python_version >= "3.10" and python_version < "4.0"
 sqlalchemy==2.0.12 ; python_version >= "3.10" and python_version < "4.0"
 starlette==0.26.1 ; python_version >= "3.10" and python_version < "4.0"
