Replace vars to .env variables

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,15 +11,21 @@ services:
       - db
     ports:
       - 8000:8000
-    command: bash -c "cd app && pip install -r requirements.txt && make start-server"
+    command: bash -c "cd app
+                      && pip install poetry
+                      && poetry install
+                      && make automigrate
+                      && make migrate
+                      && make run-server"
+
 
   db:
     image: postgres:15
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: postgres
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASS}
+      POSTGRES_DB: ${DB_NAME}
     volumes:
       - ./pgdata:/var/lib/postgres/data
     ports:
-      - 5432:5432
+      - ${DB_PORT}:5432
